--- a/.github/workflows/check-ieee-conference-a4-pdflatex-bibtex-2021-true.yml
+++ b/.github/workflows/check-ieee-conference-a4-pdflatex-bibtex-2021-true.yml
@@ -1,13 +1,12 @@
 name: Check ieee-conference-a4-pdflatex-bibtex-2021-true
 on: [push]
+concurrency:
+  group: ieee-conference-a4-pdflatex-bibtex-2021-true
+  cancel-in-progress: true
 jobs:
   check:
     runs-on: ubuntu-latest
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.8.0
-        with:
-          access_token: ${{ github.token }}
       - name: Set up Git repository
         uses: actions/checkout@v2
       - uses: actions/setup-node@v1
