--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "yeoman-generator"
   ],
   "devDependencies": {
-    "eslint": "^8.5.0",
+    "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-xo": "^0.39.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
-    "jest": "^27.4.5",
-    "lint-staged": "^12.1.3",
+    "jest": "^27.4.7",
+    "lint-staged": "^12.1.7",
     "prettier": "^2.5.1",
     "yeoman-assert": "^3.1.1",
     "yeoman-test": "^6.2.0"
@@ -36,10 +36,10 @@
   },
   "dependencies": {
     "basic-ftp": "^4.6.6",
-    "chalk": "^4.1.2",
+    "chalk": "~4.1.2",
     "minimist": "^1.2.5",
     "unzipper": "^0.10.11",
-    "yeoman-generator": "^5.4.2",
+    "yeoman-generator": "^5.5.2",
     "yeoman-option-or-prompt": "^2.0.1",
     "yosay": "^2.0.2"
   },
