--- a/generators/app/templates/Dockerfile.reitzig
+++ b/generators/app/templates/Dockerfile.reitzig
@@ -11,8 +11,9 @@ RUN pip3 install pygments
 
 # Emulate "Install dependencies" of "entrypoint work ..."
 <% if (texlive < 2022) { -%>
+RUN tlmgr update --self --repository http://ftp.math.utah.edu/pub/tex/historic/systems/texlive/<%= texlive %>/tlnet-final
 COPY Texlivefile /work/src
-RUN xargs tlmgr install --repository ftp://ftp.math.utah.edu/pub/tex/historic/systems/texlive/<%= texlive %>/tlnet-final < "/work/src/Texlivefile" && \
+RUN xargs tlmgr install --repository http://ftp.math.utah.edu/pub/tex/historic/systems/texlive/<%= texlive %>/tlnet-final < "/work/src/Texlivefile" && \
 <% } else { -%>
 RUN tlmgr update --self --repository https://mirror.mwt.me/ctan/systems/texlive/tlnet
 COPY Texlivefile /work/src
