--- a/generators/app/templates/Dockerfile.reitzig
+++ b/generators/app/templates/Dockerfile.reitzig
@@ -3,16 +3,18 @@ FROM reitzig/texlive-<% switch (latexcompiler) {
   case "lualatex": %>base-luatex<% break;
   default: %>base<% break;
 } -%>:<% switch (texlive) {
-  case 2021: %>2021.5<% break;
+  case 2022: %>2022.2<% break;
+  case 2021: %>2021.10<% break;
 } -%>
 
 RUN apk update && apk add --no-cache bash perl python3 py3-pip
 RUN pip3 install pygments
 
 # Emulate "Install dependencies" of "entrypoint work ..."
-<% if (texlive < 2021) { -%>
+<% if (texlive < 2022) { -%>
+RUN tlmgr update --self --repository http://ftp.math.utah.edu/pub/tex/historic/systems/texlive/<%= texlive %>/tlnet-final
 COPY Texlivefile /work/src
-RUN xargs tlmgr install --repository ftp://ftp.math.utah.edu/pub/tex/historic/systems/texlive/<%= texlive %>/tlnet-final < "/work/src/Texlivefile" && \
+RUN xargs tlmgr install --repository http://ftp.math.utah.edu/pub/tex/historic/systems/texlive/<%= texlive %>/tlnet-final < "/work/src/Texlivefile" && \
 <% } else { -%>
 RUN tlmgr update --self --repository https://mirror.mwt.me/ctan/systems/texlive/tlnet
 COPY Texlivefile /work/src
