--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,18 +14,21 @@
               "yo",
               "${workspaceFolder}",
               "--githubpublish",
-              "--texlive=2021",
               "--documentclass=lncs",
               "--latexcompiler=pdflatex",
               "--bibtextool=bibtex",
+              "--papersize=a4",
+              "--overleaf=false",
+              "--texlive=2022",
+              "--docker=false",
               "--language=en",
               "--font=default",
               "--listings=listings",
-              "--cleveref=true",
               "--enquotes=csquotes",
               "--tweak_outerquote=babel",
               "--todo=pdfcomment",
-              "--examples=true"
+              "--examples=true",
+              "--howtotext=true"
             ],
             "console": "integratedTerminal",
             "disableOptimisticBPs": true,
@@ -44,18 +47,21 @@
               "yo",
               "${workspaceFolder}",
               "--githubpublish",
-              "--texlive=2021",
               "--documentclass=lncs",
               "--latexcompiler=pdflatex",
               "--bibtextool=bibtex",
+              "--papersize=a4",
+              "--overleaf=false",
+              "--texlive=2022",
+              "--docker=false",
               "--language=en",
               "--font=default",
               "--listings=minted",
-              "--cleveref=true",
               "--enquotes=csquotes",
               "--tweak_outerquote=babel",
               "--todo=pdfcomment",
-              "--examples=true"
+              "--examples=true",
+              "--howtotext=true"
             ],
             "console": "integratedTerminal",
             "disableOptimisticBPs": true,
