--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-latex-template",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "Generates a latex template to be used as start for writing scientific works (papers, articles, theses)",
   "homepage": "https://github.com/latextemplates/generator-latex-template",
   "author": {
@@ -77,5 +77,5 @@
     "test": "jest"
   },
   "repository": "https://github.com/latextemplates/generator-latex-template.git",
-  "license": "GPL-3.0"
+  "license": "0BSD"
 }
